[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["JaguarKovalev <jaguarkovalev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.18.0"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
